--- a/NewPandemic4/Views/Home/IndexNews.cshtml
+++ b/NewPandemic4/Views/Home/IndexNews.cshtml
@@ -2,4 +2,16 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["News"] = "News about pandemic";
 }
+<table>
+    <thead>
+        NewPandemic4
+    </thead>
+    <tbody>
+        <tr>
+            <td>@NewsBase.ListNews</td>
+
+        </tr>
+    </tbody>
+</table>
