--- a/NewPandemic4/Views/Home/IndexNews.cshtml
+++ b/NewPandemic4/Views/Home/IndexNews.cshtml
@@ -2,16 +2,17 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["News"] = "News about pandemic";
+  <!--------  ViewData["Title"] = "Pandemic information";----- Здесь будет эксепшн ---->
+    ViewData["IndexNews"] = "News about pandemic";
 }
 <table>
     <thead>
-        NewPandemic4
+        
+        ViewData["IndexNews"] = "News about pandemic";
     </thead>
     <tbody>
         <tr>
-            <td>@NewsBase.ListNews</td>
-
-        </tr>
+            <td>Plus</td>
+       </tr>
     </tbody>
 </table>
