--- a/NewPandemic4/Views/News/IndexNews.cshtml
+++ b/NewPandemic4/Views/News/IndexNews.cshtml
@@ -1,19 +1,20 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model IEnumerable<News>
+
 @{
   <!--------  ViewData["Title"] = "Pandemic information";----- Здесь будет эксепшн ---->
     ViewData["IndexNews"] = "News about pandemic";
     Layout = "_Layout";
+   var collectionNews = ViewData["key"] as List<News>;
 }
 <table class="table table-sm table-striped">
     <thead>
         <tr><th>Id</th><th>Title</th><th>Text</th><th>AuthorName</th><th>IsFake</th></tr>
     </thead>
     <tbody>
-    <!----   @foreach(var n in ListNews)----->
-        foreach(var n in IndexNews)
+    
+        @foreach(var n in collectionNews)
         {
             <tr>
                 <td>@n.Id</td>
